<?xml version="1.0" encoding="UTF-8"?>
<!-- - Copyright 2011-2013 HTTL Team. - - Licensed under the Apache License, 
	Version 2.0 (the "License"); - you may not use this file except in compliance 
	with the License. - You may obtain a copy of the License at - - http://www.apache.org/licenses/LICENSE-2.0 
	- - Unless required by applicable law or agreed to in writing, software - 
	distributed under the License is distributed on an "AS IS" BASIS, - WITHOUT 
	WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. - See the 
	License for the specific language governing permissions and - limitations 
	under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
    <!--<parent>
        <groupId>softmotions</groupId>
        <artifactId>softmotions-base-pom</artifactId>
        <version>1.1.0</version>
    </parent>-->
	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Snapshots</name>
			<url>http://maven.bizsaas.tech/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
    <!--<repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>softmotions_repository</id>
            <url>https://repo.softmotions.com/repository/softmotions-public</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>-->
	<artifactId>httl-parent</artifactId>
	<version>1.0.12-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>HTTL-Parent</name>
	<description>Hyper Text Template Language and Engine.</description>
	<!-- <url>http://httl.github.io</url> -->
	<inceptionYear>2012</inceptionYear>
	<properties>
		<updateReleaseInfo>true</updateReleaseInfo>
	</properties>
	<modules>
		<module>httl</module>
		<module>httl-script</module>
		<module>httl-servlet</module>
		<module>httl-springmvc</module>
		<module>httl-struts</module>
		<module>httl-webx</module>
		<module>httl-jfinal</module>
		<module>httl-nutz</module>
	</modules>
	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<organization>
		<name>HTTL</name>
		<!-- <url>http://httl.github.io</url> -->
	</organization>
	<!--<repositories>
		<repository>
			<id>httl-repository</id>
			<name>Httl Repository</name>
			<url>http://httl.github.io/maven</url>
		</repository>
	</repositories>-->
	<!--<scm>
		<url>https://github.com/Softmotions/httl</url>
		<connection>scm:git:https://github.com/Softmotions/httl.git</connection>
		<developerConnection>scm:git:git@github.com:Softmotions/httl.git</developerConnection>
	</scm>-->
	<issueManagement>
		<system>github</system>
		<url>https://github.com/Softmotions/httl/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>HTTL User Mailling List</name>
			<subscribe>httl-user+subscribe AT googlegroups DOT com</subscribe>
			<unsubscribe>httl-user+unsubscribe AT googlegroups DOT com</unsubscribe>
			<post>httl-user AT googlegroups DOT com</post>
			<archive>https://groups.google.com/forum/#!forum/httl-user</archive>
		</mailingList>
	</mailingLists>
	<developers>
		<developer>
			<name>Liang Fei</name>
			<email>liangfei0201 A gmail D com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <attach>true</attach>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <forkMode>always</forkMode>
                    <argLine>-Xms128m -Xmx2028m -XX:PermSize=64m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>true</addMavenDescriptor>
                        <index>true</index>
                        <manifest>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!--<plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <show>public</show>
                    <charset>UTF-8</charset>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <links>
                        <link>http://docs.oracle.com/javase/6/docs/api</link>
                    </links>
                </configuration>
            </plugin>-->
        </plugins>
    </build>
</project>